tests/errors/flow/unreachable-after-return.fn
---
Description: Code following an unconditional return is unreachable
Expected: compile warning
---

type Program
{
    fn Main -> i32
    {
        return 1
        var x = 10
    }
}
